<resources>
    <string name="app_name" translatable="false">RazasyPelejesDiazDuhour</string>
    <string name="app_reconocimiento" translatable="false">Reconocimiento</string>
    <string name="app_minijuego" translatable="false">Jugar Razas y Pelajes</string>
    <string name="app_minijuego_cruzas" translatable="false">Jugar Cruzas</string>
    <string name="app_name_logo" translatable="false">Razas y Pelajes</string>
    <string name="image_logo" translatable="false">Logo CEDICA</string>
    <string name="logo_unlp" translatable="false">Logo UNLP</string>
    <string name="logo_info" translatable="false">Logo Facultad Informatica</string>
    <string name="about_button" translatable="false">Acerca de</string>
    <string name="settings_button" translatable="false">Configuración</string>
    <string name="about_title" translatable="false">ACERCA DE CEDICA RAZAS Y PELAJES</string>
    <string name="about_dialog_btn" translatable="false">Cerrar</string>
    <string name="about_message_center" translatable="false">El Centro de Equitación para Personas con Discapacidad y Carenciadas -CEDICA- es una Asociación Civil sin Fines de Lucro fundada en 1994 en la ciudad de La Plata, Provincia de Buenos Aires. Trabaja con la finalidad de igualar oportunidades en pos de la Inclusión Social, procurando la reinserción familiar, el logro de la escolaridad, la integración laboral y la mejora integral de la calidad de vida. La actividad se denomina Terapias y Actividades Asistidas con Caballos (TACAs).
        CEDICA junto al Laboratorio de Investigación en Nuevas Tecnologías Informáticas -LINTI- de la Facultad de Informática de la Universidad Nacional de La Plata, como proyecto final  2018 de la cátedra de Laboratorio de Software, efectuaron en equipo la presente aplicación, que consiste en identificar las distintas razas, pelajes y cruzas de los caballos de CEDICA para favorecer los procesos terapéuticos y de enseñanza y aprendizaje de las alumnas y alumnos que concurren al centro.
        La finalidad es que los jinetes y amazonas puedan reconocer las razas, pelajes y cruzas de los diferentes caballos que se encuentran en la Institución, mediante la instancia de juego, para luego poder aplicar dicho conocimiento de manera vivencial.</string>
    <string name="about_message_app" translatable="false">La aplicación está compuesta por:</string>
    <string name="about_message_app_1" translatable="false">1.- MODO RECONOCIMIENTO: donde el objetivo es que las amazonas y jinetes puedan distinguir su caballo y el de sus compañeras y compañeros. Compuesto por una galería de imágenes y audios que brindan mayor información respecto a las razas, pelajes y cruzas de las opciones presentes.</string>
    <string name="about_message_app_2" translatable="false">2.- MODO JUEGO: compuesto por una serie de minijuegos que consisten en avanzar de nivel, según los aciertos obtenidos, hacia una mayor complejidad. El jugador ganará al sortear los diferentes niveles pudiendo adentrarse a una nueva aventura.</string>
    <string name="about_group" translatable="false">Maira Diaz, Ignacio Duhour.</string>
    <string name="rec_mode_title" translatable="false">Modo Reconocimiento:</string>
    <string name="play_mode_title" translatable="false">Minijuego:</string>
    <string name="int_mode_title" translatable="false">Nivel de dificultad:</string>
    <string name="settings_mode_title" translatable="false">Audio:</string>
    <string name="settings_list_radio" translatable="false">Lista</string>
    <string name="settings_grid_radio" translatable="false">Grilla</string>
    <string name="breed_rec_check" translatable="false">Raza</string>
    <string name="breed_fur_rec_check" translatable="false">Razas y Pelajes</string>
    <string name="fur_rec_check" translatable="false">Pelaje</string>
    <string name="crossbreed_rec_check" translatable="false">Cruzas</string>
    <string name="breed_fur_radio" translatable="false">Razas y Pelajes: Imagen-Palabra</string>
    <string name="breed_and_fur_radio" translatable="false">Razas y Pelajes: Palabra-Imagen</string>
    <string name="crossbreed_radio" translatable="false">Cruza: Imagen-Imagen</string>
    <string name="facil" translatable="false">Facil</string>
    <string name="dificil" translatable="false">Dificil</string>
    <string name="male_audio" translatable="false">Masculina</string>
    <string name="female_audio" translatable="false">Femenina</string>
    <string name="settings_btn" translatable="false">Guardar</string>
    <string name="home_btn" translatable="false">Boton de retorno a main</string>
    <string name="audio_btn" translatable="false">Boton de audio</string>
    <string name="loren_ipsum" translatable="false">Loren Ipsum</string>
    <string name="minigame_main_image" translatable="false">Imagen Principal</string>
    <string name="minigame_first_image" translatable="false">Primera Imagen</string>
    <string name="minigame_second_image" translatable="false">SegundaImagen</string>
    <string name="minigame_third_image" translatable="false">Tercera Imagen</string>
    <string name="minigame_fourth_image" translatable="false">Cuarta Imagen</string>
    <string name="razaypelaje_volver_boton" translatable="false">Volver</string>
    <string name="razaypelaje_title_textview" translatable="false">Juego de Razas y Pelajes</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet consectetur adipiscing elit quis conubia non pulvinar eros aptent porttitor euismod senectus, molestie nec libero turpis sapien vitae imperdiet curae massa torquent ac et parturient ullamcorper cras.</string>
    <string name="alazan" translatable="false">Capa color anaranjado parejo y uniforme, que va del amarillento al colorado azafrán. Su piel es oscura. Las crines, cerdas y miembros son del mismo color o más claros, pero nunca oscuro, pero nunca negras. Pueden ser: Alazán – Alazán Claro – Alazán Rubio – Alazán Dorado – Alazán Tostado.</string>
    <string name="alazan_pintado" translatable="false">Capa color rojizo de distintos tonos que presenta matices yendo del claro al oscuro.  Es distinguida porque los pelos de diferentes colores se agrupan formando manchas o parches.</string>
    <string name="alazan_ruano" translatable="false">Capa color rojizo de distintos tonos que presenta matices yendo del claro al oscuro.  Se caracteriza por la crin y cola blancas.</string>
    <string name="bayo" translatable="false">El color de la capa abarca una amplia gama cromática que puede ir del amarillo muy claro casi blanco hasta el marrón claro anaranjado. Este pelaje suele presentar particularidades blancas o cabos negros. Pueden ser: Bayo – Bayo Claro – Bayo Anaranjado – Bayo Encerado.</string>
    <string name="bayo_gateado" translatable="false">El color de la capa es amarilla anaranjada con distintas tonalidades. Se caracteriza por presentar raya de mula (línea que corre desde la cruz hasta la cola, de color más intenso que el resto del pelaje) y cebraduras (franjas transversales de color más oscuro que se encuentran en los miembros).</string>
    <string name="blanco" translatable="false">Formado por pelos de ese color y piel que carece de pigmentación. Pueden ser: - Blanco Común – Blanco Rosado – Blanco Porcelano.</string>
    <string name="moro" translatable="false">Formado por capa de color gris azulina, formada pelos negros y blancos sobre piel negra. Su cabeza es más bien oscura.</string>
    <string name="negro" translatable="false">El color de la capa, la crin y la cola son negros. Pueden ser: Negro azabache o renegrido – Negro Mate u Oscuro.</string>
    <string name="overo" translatable="false">Capa pigmentada con manchas blancas características por sus bordes irregulares e indefinidos. Se da tanto en una capa pigmentada con manchas blancas o al revés. La parte inferior del cuerpo suele tener más presencia de blanco que la parte superior. Pueden ser: Overo Alazán – Overo Azulejo – Overo Moro – Overo Rosado – Overo  Zaino.</string>
    <string name="picazo" translatable="false">Se caracteriza por capa oscura con frente y extremidades blancas.</string>
    <string name="pintado" translatable="false">Se caracteriza porque los pelos de diferentes colores que forman su capa se agrupan formando manchas o parches.</string>
    <string name="rosillo" translatable="false">Formado por una capa de pelos rojizos y blancos entremezclados, generalmente, sobre piel clara. Puede ser: Rosillo Blanco – Rosillo Claro – Rosillo Colorado.</string>
    <string name="tobiano" translatable="false">Capa caracterizada por manchas de bordes definidos blancas –grandes o pequeñas- que, generalmente, se inician sobre la parte dorsal. Pueden ser: Tobiano Colorado – Tobiano Negro.</string>
    <string name="tordillo" translatable="false">Se caracteriza por poseer pelos blancos y negros entremezclados, lo cual le da a la capa un aspecto grisáceo que puede variar del gris oscuro al casi blanco. Puede ser: Tordillo – Tordillo Canela – Tordillo Moro – Tordillo Negro.</string>
    <string name="zaino" translatable="false">La capa tiene un color fundamentalmente marrón, variables de un rojo al negro. Pueden ser: Zaino – Zaino Colorado – Zaino Doradillo – Zaino Oscuro.</string>
    <string name="appaloosa" translatable="false">Raza de Caballos criados según las normas del Appaloosa Horse Club para preservar los caballos de la Tribu Nez Perce casi extintos. Caracterizado por su piel moteada, su esclerótica ocular blanca -y mucho más visible que en otras razas- y sus cascos rayados bien definidos, son animales buen carácter y personalidad activa. Su nombre deriva de su aspecto característico en  su pelaje, también llamado “pecoso”. Pueden ser Nevado - Lavado - Leopardo - Mármol - Escarchado.</string>
    <string name="criollo" translatable="false">Raza de Caballos propio de Latinoamérica. Son animales de cuerpo robusto y musculoso, con unas extremidades fuertes y una abundante melena; de porte equilibrado, armónico y con el centro de gravedad bajo. De carácter autónomo y perseverante. No se aceptan en esta raza pelajes Tobiano o Pintado.</string>
    <string name="cuarto_de_milla" translatable="false">Raza de Caballos conformada por la cruza de Pura Sangre Inglés y Mustang americano. De carácter tranquilo; es muy sensible y sociable. Veloces, dúctiles, de poca estatura y corpulentos: constitución musculosa, pecho grande y ancho. Muy amplia es la gama de pelaje, sólo no se aceptan los Pintados, los Manchados (Appaloosa) ni los Albinos.</string>
    <string name="petiso_argentino" translatable="false">Raza de Caballos que nació de la cruza de petisos importados con caballos de otras razas, principalmente autóctonas. De cabeza mediana, orejas pequeñas, cuerpo armonioso y profundo; de acción ágil y suelta, temperamento activo y brioso.En la actualidad, se usa para actividades hípicas con niños y niñas.</string>
    <string name="sangre_puro_de_carrera_spc" translatable="false">Raza de Caballos con orígen el siglo XVIII en Inglaterra cuando yeguas madres inglesas fueron cruzadas con sementales árabes importados para crear corredores de distancia. Los pura sangre se destacan como caballos de carrera pero también se utilizan como caballos de equitación y otros entrenamientos ecuestres combinados, debido a su gran  condición atlética. El color de capa más común es el castaño pero también puede ser Zaino, Alazán o Tordillo en cuanto a su pelaje.</string>
</resources>